--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 #header {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  width: 100%;
+}
+
+body {
+  font-family: Helvetica;
+  text-align: center;
 }
