--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
 #header {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
-  width: 100%;
+}
+
+#header h1 {
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+
+#header h4 {
+  color: white;
+  font-size: 18px
 }
 
 body {
   font-family: Helvetica;
   text-align: center;
+}
+
+#work h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#work h3 {
+  font-size: 23px;
+  font-weight: bold;
 }
