--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-#header {
+#header, #banner {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
 #header h1 {
   font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+
+#banner h1 {
+  font-size: 23px;
   font-weight: bold;
   color: white;
 }
@@ -23,7 +29,11 @@ body {
   font-weight: bold;
 }
 
-#work h3 {
+h3 {
   font-size: 23px;
   font-weight: bold;
+}
+
+p {
+  font-size: 14px;
 }
