--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-#header, #banner {
+#header, #banner, #footer {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+
+#footer {
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+}
+
+a {
+  color: white;
 }
 
 #header h1 {
@@ -32,6 +42,11 @@ body {
 h3 {
   font-size: 23px;
   font-weight: bold;
+  color: white;
+}
+
+h4 {
+  color: white;
 }
 
 p {
